[workspace.package]
description = "rclap is a Rust utility designed to simplify the use of the clap crate. It reduces boilerplate code by generating clap structures from a TOML configuration file, allowing you to define your command-line interface's requirements externally"
authors = ["Slim Ouertani"]

[workspace]
members = ["rclap", "example", "rclap_core", "rclap_derive"]

resolver = "3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
[workspace.dependencies]
