[package]
name = "example"
version = "0.1.1"
edition = "2024"
categories = ["config"]
description = "rclap is a Rust configuration utility to help to generate the clap structures. The main purpose is to reduce boilerplate code when using clap and expose the configuration requirements as a toml file."
homepage = "https://github.com/ouertani/rclap"
keywords = ["config", "args", "env", "settings", "clap"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ouertani/rclap"
publish = false
[dependencies]
clap = { version = "4.5", features = ["env", "derive"] }
rclap = { path = "../rclap", version = "0.1.1" }
