[package]
name = "example"
version = "0.1.15"
edition = "2024"
categories = ["config"]
description = "rclap is a Rust utility designed to simplify the use of the clap crate. It reduces boilerplate code by generating clap structures from a TOML configuration file, allowing you to define your command-line interface's requirements externally"
homepage = "https://github.com/ouertani/rclap"
keywords = ["config", "args", "env", "settings", "clap"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ouertani/rclap"
publish = false
[dependencies]
clap = { version = "4.5", features = ["env", "derive"] }
rclap = { path = "../rclap" }
[dev-dependencies]
serial_test = "3.2"
