[package]
name = "rclap"
version = "0.1.19"
edition = "2024"
authors = ["Slim Ouertani"]
categories = ["config"]
description = "rclap is a Rust configuration utility to help to generate the clap structures. The main purpose is to reduce boilerplate code when using clap and expose the configuration requirements as a toml file."
homepage = "https://github.com/ouertani/rclap"
keywords = ["config", "args", "env", "settings", "clap"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ouertani/rclap"

[dependencies]
rclap_derive = { path = "../rclap_derive", version = "0.1.19" }
