[package]
name = "rclap_core"
version = "0.1.18"
edition = "2024"
categories = ["config"]
description = "rclap is a Rust utility designed to simplify the use of the clap crate. It reduces boilerplate code by generating clap structures from a TOML configuration file, allowing you to define your command-line interface's requirements externally"
homepage = "https://github.com/ouertani/rclap"
keywords = ["config", "args", "env", "settings", "clap"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ouertani/rclap"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
[dev-dependencies]
tempfile = "3.22"
