[package]
name = "rclap_derive"
version = "0.1.0"
edition = "2024"
categories = ["config"]
description = "rclap is a Rust configuration utility to help to generate the clap structures. The main purpose is to reduce boilerplate code when using clap and expose the configuration requirements as a toml file."
homepage = "https://github.com/ouertani/rclap"
keywords = ["config", "args", "env", "settings", "clap"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ouertani/rclap"
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
rclap_core = { path = "../rclap_core", version = "0.1.0" }
syn = { version = "2.0", features = ["full"] }
