[package]
name = "rclap_derive"
version = "0.1.12"
edition = "2024"
categories = ["config"]
description = "rclap is a Rust utility designed to simplify the use of the clap crate. It reduces boilerplate code by generating clap structures from a TOML configuration file, allowing you to define your command-line interface's requirements externally"
homepage = "https://github.com/ouertani/rclap"
keywords = ["config", "args", "env", "settings", "clap"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ouertani/rclap"
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
rclap_core = { path = "../rclap_core", version = "0.1.12" }
syn = { version = "2.0", features = ["full"] }
